fix: fix z-index for calendar in registration form

--- a/cloud-movies-fe/src/components/auth/register.css
+++ b/cloud-movies-fe/src/components/auth/register.css
@@ -78,3 +78,11 @@
   color: white;
   text-align: center;
 }
+
+.popover-content-custom {
+  z-index: 1000;
+}
+
+.calendar-custom {
+  z-index: 1001;
+}
